LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/sfpm_Question__c.object-meta.xml
<CustomObject>
    <description>2020-01-14 - Part of the sfpm set of Objects (Project, Epic, Task, Approval). A question about a Task or Epic.</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>