LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The answer.</description>
    <label>Answer</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>