LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-15 - N. Ehrmann - The related Project for this Question.</description>
    <label>Project</label>
    <referenceTo>sfpm_Project__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>