LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>2020-01-14 - N. Ehrmann - The question.</description>
    <label>Question</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>