LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-15 - N. Ehrmann - The related Task for this question.</description>
    <label>Task</label>
    <referenceTo>sfpm_Task__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>