LWCLearnwithFLOWOrg/force-app/main/default/objects/sfpm_Question__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-01-14 - N. Ehrmann - The addressee of the question.</description>
    <label>To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>